--- a/sistema_usuarios/src/main/resources/static/css/styles.css
+++ b/sistema_usuarios/src/main/resources/static/css/styles.css
@@ -54,6 +54,21 @@ input[type="checkbox"] {
     font-size: 16px;
 }
 
+select {
+    width: 100%;
+    max-width: 400px; 
+    padding: 10px;
+    font-size: 14px;
+    font-family: Arial, sans-serif;
+    color: #555;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    transition: all 0.3s ease;
+    outline: none;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
 input[type="checkbox"] {
     width: auto;
 }
