--- a/sistema_artista/src/main/resources/static/css/styles.css
+++ b/sistema_artista/src/main/resources/static/css/styles.css
@@ -187,3 +187,34 @@ tr:hover {
     font-weight: bold;
     font-size: 15px;
 }
+
+nav {
+    background-color: #333;
+    padding: 10px;
+    font-family: Arial, sans-serif;
+}
+
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
+
+nav ul li {
+    margin: 0 15px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+nav ul li a:hover {
+    background-color: #555;
+}
